[tool]
[tool.poetry]
name = "asyncio-multisubscriber-queue"
version = "0.3.2-dev"
description = "Allow a single producer to provide the same payload to multiple consumers simultaniously"
authors = ["Kyle Smith <smithk86@smc3.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/smithk86/asyncio-multisubscriber-queue"
classifiers = [
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.10,<4"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pytest = ">=7"
pytest-asyncio = "*"
pytest-mypy = "*"
black = "*"

[tool.poetry.scripts]
pytest = "pytest:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = "true"

[tool.pytest.ini_options]
addopts = "--mypy"
