[tool]
[tool.poetry]
name = "asyncio-multisubscriber-queue"
version = "0.4.0"
description = "Allow a single producer to provide the same payload to multiple consumers simultaneously"
authors = ["Kyle Smith <smithk86@smc3.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/smithk86/asyncio-multisubscriber-queue"
repository = "https://github.com/smithk86/asyncio-multisubscriber-queue"
documentation = "https://smithk86.github.io/asyncio-multisubscriber-queue"
classifiers = [
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.10,<4"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pytest = ">=7"
pytest-asyncio = "*"
pytest-mypy = "*"
black = "*"

[tool.poetry.scripts]
pytest = "pytest:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
strict = "true"

[tool.pytest.ini_options]
addopts = "--mypy"

[tool.pylint.MESSAGE_CONTROL]
disable = [
    "missing-module-docstring",
    "invalid-name",
]
enable = "useless-suppression"

[tool.pylint.REPORTS]
reports = "no"

[tool.pylint.FORMAT]
max-line-length = "120"

[tool.pylint.VARIABLES]
ignored-argument-names = "args|kwargs|_|__"

[tool.pylint.BASIC]
no-docstring-rgx = "(__.*__|main|test.*|.*test|.*Test|^_.*)$"

[tool.pycln]
all = true

[tool.pyright]
include = ["__template__"]

[tool.pydocstyle]
add-ignore = "D100,D104,D105,D107"
convention = "google"
match_dir = "asyncio_task_pool"
